--- a/iOS/Base.lproj/Main.storyboard
+++ b/iOS/Base.lproj/Main.storyboard
@@ -272,17 +272,51 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tcc-xK-f9C">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Tcc-xK-f9C">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCell" id="QiS-Mr-rge">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EventCell" rowHeight="62" id="QiS-Mr-rge" customClass="EventTableViewCell" customModule="GitHub_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="62"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QiS-Mr-rge" id="SRx-FG-ntv">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="61.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Oct Icon" translatesAutoresizingMaskIntoConstraints="NO" id="ltu-wf-usC">
+                                                    <rect key="frame" x="15" y="11" width="40" height="40"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="Hfg-Vm-G8Y"/>
+                                                        <constraint firstAttribute="width" constant="40" id="U1r-jB-k2j"/>
+                                                    </constraints>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                            <real key="value" value="5"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v8u-JI-0F1">
+                                                    <rect key="frame" x="63" y="11" width="297" height="40"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="ltu-wf-usC" secondAttribute="bottom" id="3Z4-A8-yG5"/>
+                                                <constraint firstItem="v8u-JI-0F1" firstAttribute="leading" secondItem="ltu-wf-usC" secondAttribute="trailing" constant="8" id="FJt-Yx-3iI"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="v8u-JI-0F1" secondAttribute="trailing" id="QbP-Un-VmN"/>
+                                                <constraint firstItem="ltu-wf-usC" firstAttribute="leading" secondItem="SRx-FG-ntv" secondAttribute="leadingMargin" id="TQO-lV-z9W"/>
+                                                <constraint firstItem="ltu-wf-usC" firstAttribute="top" relation="greaterThanOrEqual" secondItem="SRx-FG-ntv" secondAttribute="topMargin" id="URy-hy-HFp"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="v8u-JI-0F1" secondAttribute="bottom" id="XJN-2i-MqV"/>
+                                                <constraint firstItem="ltu-wf-usC" firstAttribute="centerY" secondItem="SRx-FG-ntv" secondAttribute="centerY" id="aNT-jP-esT"/>
+                                                <constraint firstItem="v8u-JI-0F1" firstAttribute="top" secondItem="SRx-FG-ntv" secondAttribute="topMargin" id="si7-Gt-7J4"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImageView" destination="ltu-wf-usC" id="uT7-s2-uij"/>
+                                            <outlet property="descriptionLabel" destination="v8u-JI-0F1" id="Uh5-0i-XGY"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
