--- a/iOS/Base.lproj/Main.storyboard
+++ b/iOS/Base.lproj/Main.storyboard
@@ -195,6 +195,83 @@
                                             </segue>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="OrganizationsCell" rowHeight="136" id="Hb2-ya-ya0" customClass="OrganizationsTableViewCell" customModule="GitHub_iOS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="211" width="375" height="136"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hb2-ya-ya0" id="Emp-PM-d3t">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="135.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bl8-bb-ojG">
+                                                    <rect key="frame" x="0.0" y="40.5" width="375" height="87"/>
+                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="87" id="6PP-5S-A28"/>
+                                                    </constraints>
+                                                    <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="16" minimumInteritemSpacing="16" id="82G-Yc-9TG">
+                                                        <size key="itemSize" width="86" height="86"/>
+                                                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                                        <inset key="sectionInset" minX="16" minY="0.0" maxX="16" maxY="0.0"/>
+                                                    </collectionViewFlowLayout>
+                                                    <cells>
+                                                        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OrganizationCell" id="21w-zK-yKG" customClass="OrganizationCollectionViewCell" customModule="GitHub_iOS" customModuleProvider="target">
+                                                            <rect key="frame" x="16" y="0.5" width="86" height="86"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                                                <rect key="frame" x="0.0" y="0.0" width="86" height="86"/>
+                                                                <autoresizingMask key="autoresizingMask"/>
+                                                                <subviews>
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Oct Icon" translatesAutoresizingMaskIntoConstraints="NO" id="pmP-gt-N8C">
+                                                                        <rect key="frame" x="0.0" y="0.0" width="86" height="86"/>
+                                                                        <userDefinedRuntimeAttributes>
+                                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                                                <real key="value" value="5"/>
+                                                                            </userDefinedRuntimeAttribute>
+                                                                        </userDefinedRuntimeAttributes>
+                                                                    </imageView>
+                                                                </subviews>
+                                                            </view>
+                                                            <constraints>
+                                                                <constraint firstItem="pmP-gt-N8C" firstAttribute="leading" secondItem="21w-zK-yKG" secondAttribute="leading" id="9zy-G8-bNC"/>
+                                                                <constraint firstAttribute="trailing" secondItem="pmP-gt-N8C" secondAttribute="trailing" id="MJA-ds-RaZ"/>
+                                                                <constraint firstAttribute="bottom" secondItem="pmP-gt-N8C" secondAttribute="bottom" id="avw-mM-c7T"/>
+                                                                <constraint firstItem="pmP-gt-N8C" firstAttribute="top" secondItem="21w-zK-yKG" secondAttribute="top" id="dyt-P3-OOR"/>
+                                                            </constraints>
+                                                            <connections>
+                                                                <outlet property="iconImageView" destination="pmP-gt-N8C" id="eE4-OH-UpY"/>
+                                                            </connections>
+                                                        </collectionViewCell>
+                                                    </cells>
+                                                    <connections>
+                                                        <outlet property="dataSource" destination="Hb2-ya-ya0" id="vJa-5M-tyU"/>
+                                                        <outlet property="delegate" destination="Hb2-ya-ya0" id="WGk-dh-L4T"/>
+                                                    </connections>
+                                                </collectionView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Organizations" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yqu-WN-yms">
+                                                    <rect key="frame" x="15" y="11" width="345" height="21.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="22" id="1FU-AC-Fz6"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="Yqu-WN-yms" firstAttribute="top" secondItem="Emp-PM-d3t" secondAttribute="topMargin" id="1Qo-W2-U2m"/>
+                                                <constraint firstItem="Yqu-WN-yms" firstAttribute="leading" secondItem="Emp-PM-d3t" secondAttribute="leadingMargin" id="Dd5-i1-hE2"/>
+                                                <constraint firstAttribute="bottom" secondItem="bl8-bb-ojG" secondAttribute="bottom" constant="8" id="M63-eZ-E8q"/>
+                                                <constraint firstAttribute="trailing" secondItem="bl8-bb-ojG" secondAttribute="trailing" id="Osr-dh-g7r"/>
+                                                <constraint firstItem="bl8-bb-ojG" firstAttribute="leading" secondItem="Emp-PM-d3t" secondAttribute="leading" id="bEv-8I-C0o"/>
+                                                <constraint firstItem="bl8-bb-ojG" firstAttribute="top" secondItem="Yqu-WN-yms" secondAttribute="bottom" constant="8" id="sZl-u1-ZbS"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="Yqu-WN-yms" secondAttribute="trailing" id="sr7-Ob-Pd7"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="collectionView" destination="bl8-bb-ojG" id="PLM-1s-WGG"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="YSV-Gw-E9j"/>
@@ -912,7 +989,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="86" height="86"/>
                                                                 <autoresizingMask key="autoresizingMask"/>
                                                                 <subviews>
-                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="jetpackoctocat" translatesAutoresizingMaskIntoConstraints="NO" id="fhx-dB-clX">
+                                                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Oct Icon" translatesAutoresizingMaskIntoConstraints="NO" id="fhx-dB-clX">
                                                                         <rect key="frame" x="0.0" y="0.0" width="86" height="86"/>
                                                                         <userDefinedRuntimeAttributes>
                                                                             <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -1232,7 +1309,7 @@
         <image name="steroidtocat" width="448" height="448"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="b6c-ys-pCx"/>
+        <segue reference="XaL-Nk-lRD"/>
         <segue reference="mMB-iv-HKG"/>
     </inferredMetricsTieBreakers>
 </document>
